--- a/frontendAndroid/DriverApp/app/src/main/res/layout/driver_profile.xml
+++ b/frontendAndroid/DriverApp/app/src/main/res/layout/driver_profile.xml
@@ -65,7 +65,6 @@
         android:layout_marginBottom="54dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="testpassword"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/ratingBar"
@@ -83,7 +82,6 @@
         android:layout_marginRight="13dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="bestusername_ever"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/password_textview"
@@ -99,7 +97,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="21dp"
         android:layout_marginRight="21dp"
-        android:text="@string/full_name_label"
+        android:text="@string/full_name_profile"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/username_label"
@@ -153,7 +151,6 @@
         android:layout_marginBottom="12dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="John Smith"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/username_textview"
@@ -167,7 +164,6 @@
         android:layout_height="45dp"
         android:layout_marginBottom="68dp"
         android:isIndicator="true"
-        android:rating="4.7"
         app:layout_constraintBottom_toTopOf="@+id/save_changes_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_textview" />
@@ -198,7 +194,6 @@
         android:layout_marginBottom="14dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Nissan GTR"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/ratingBar"
