--- a/frontendAndroid/passengerAndroid/app/src/main/res/layout/activity_search.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/layout/activity_search.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/register_page" />
+    <include layout="@layout/search_page" />
 
 </android.support.design.widget.CoordinatorLayout>
