--- a/frontendAndroid/DriverApp/app/src/main/res/layout/view_journeys.xml
+++ b/frontendAndroid/DriverApp/app/src/main/res/layout/view_journeys.xml
@@ -1,172 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:id="@+id/journeys_scroll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/journey_labels"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/start_loc_label"
-                    android:layout_width="137dp"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:text="@string/start_location_label" />
-
-                <EditText
-                    android:id="@+id/end_location_label"
-                    android:layout_width="131dp"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textFilter"
-                    android:text="@string/end_location_label" />
-
-                <EditText
-                    android:id="@+id/date_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:text="@string/date_label" />
-
-            </LinearLayout>
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/cur_journeys"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cur_journeys"
-            app:layout_constraintVertical_bias="0.991">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/cur_start_loc"
-                    android:layout_width="136dp"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/cur_end_loc"
-                    android:layout_width="132dp"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/cur_date"
-                    android:layout_width="131dp"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical">
-
-                </android.support.v7.widget.RecyclerView>
-
-            </LinearLayout>
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/future_journeys"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/future_journeys"
-            app:layout_constraintVertical_bias="0.991">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/future_start_loc"
-                    android:layout_width="136dp"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/futur_end_loc_loc"
-                    android:layout_width="132dp"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/future_date"
-                    android:layout_width="131dp"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical">
-
-                </android.support.v7.widget.RecyclerView>
-
-            </LinearLayout>
-
-        </FrameLayout>
-
-
-    </ScrollView>
-
-
-
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginLeft="148dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginRight="148dp"
-        android:layout_marginBottom="48dp"
-        android:onClick="onBackClick"
-        android:text="Back"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="View Journeys"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:id="@+id/allJourneys"
+        android:layout_width="352dp"
+        android:layout_height="444dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/lin_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
