Added View journeys button in main menu, we can now see all journeys without filtering(need to implement)

--- a/frontendAndroid/PassengerApp/app/src/main/res/layout/activity_main.xml
+++ b/frontendAndroid/PassengerApp/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:gravity="center"
@@ -65,6 +65,22 @@
         android:layout_marginBottom="152dp"
         android:onClick="onMyProfileClick"
         android:text="@string/my_profile_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/car_journeys"
+        android:layout_width="213dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginLeft="86dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginRight="85dp"
+        android:layout_marginBottom="256dp"
+        android:onClick="onViewJourneysClick"
+        android:text="@string/view_journeys_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
