--- a/frontendAndroid/DriverApp/app/src/main/res/layout/add_journey.xml
+++ b/frontendAndroid/DriverApp/app/src/main/res/layout/add_journey.xml
@@ -52,7 +52,7 @@
         android:layout_marginBottom="54dp"
         android:text="@string/number_passenger_label"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/add_journey_button"
+        app:layout_constraintBottom_toTopOf="@+id/edit_journey_button"
         app:layout_constraintEnd_toStartOf="@+id/num_passenger"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/price_per_passenger_label" />
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pickup_time_button" />
 
     <Button
-        android:id="@+id/add_journey_button"
+        android:id="@+id/edit_journey_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="134dp"
@@ -196,6 +196,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_journey_button" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_journey_button" />
 
 </android.support.constraint.ConstraintLayout>
