Added join journey possiblity and more info in layout

--- a/frontendAndroid/ege/PassengerApp/app/src/main/res/layout/activity_main.xml
+++ b/frontendAndroid/ege/PassengerApp/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/AppTheme">
@@ -78,10 +79,10 @@
         android:layout_marginLeft="86dp"
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
-        android:layout_marginBottom="336dp"
+        android:layout_marginBottom="8dp"
         android:onClick="onViewJourneysClick"
         android:text="@string/view_journeys_button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/my_profile_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
